WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
298629
[JSC] Fix `ToIndex(value)` to Align with TC39
https://bugs.webkit.org/show_bug.cgi?id=298629
Summary
[JSC] Fix `ToIndex(value)` to Align with TC39
Keita Nonaka
Reported
2025-09-09 16:35:19 PDT
Fix `ToIndex(value)` to align with TC39.
https://tc39.es/ecma262/#sec-toindex
Attachments
Add attachment
proposed patch, testcase, etc.
Keita Nonaka
Comment 1
2025-09-09 16:46:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/50519
EWS
Comment 2
2025-09-14 22:31:41 PDT
Committed
299946@main
(92134253a5d4): <
https://commits.webkit.org/299946@main
> Reviewed commits have been landed. Closing PR #50519 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-09-14 22:32:15 PDT
<
rdar://problem/160589642
>
WebKit Commit Bot
Comment 4
2025-09-15 10:33:57 PDT
Re-opened since this is blocked by
bug 298881
Keita Nonaka
Comment 5
2025-12-05 20:42:48 PST
Resolved in
https://github.com/WebKit/WebKit/pull/50767
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug