[JSC] Fix `ToIndex(value)` to Align with TC39 https://bugs.webkit.org/show_bug.cgi?id=298629

Reviewed by Yusuke Suzuki.

This patch fixes `ToIndex(value)` implementation to align with TC39 [1].
This fix indirectly corrects functions that rely on `ToIndex(value)`,
such as `BigInt.asUintN`[2], `BigInt.asIntN`[3] and more.

[1]: https://tc39.es/ecma262/#sec-toindex
[2]: https://tc39.es/ecma262/#sec-bigint.asuintn
[3]: https://tc39.es/ecma262/#sec-bigint.asintn

* JSTests/stress/bigint-asintn.js:
(shouldThrow):
* JSTests/stress/bigint-asuintn.js:
(shouldThrow):
* Source/JavaScriptCore/runtime/JSCJSValue.h:
* Source/JavaScriptCore/runtime/JSCJSValueInlines.h:
(JSC::JSValue::toIndex const):

Canonical link: https://commits.webkit.org/299946@main